--- a/02/index.html
+++ b/02/index.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class="show_goal">
+<body class="show_goal see_through">
 
-<h1>Hello world!</h1>
+<h1>HELLO WORLD!</h1>
 
 <p>This is my great website.</p>
 
