--- a/05/index.html
+++ b/05/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class="show_goal">
+<body class="show_goal see-through">
 
 <h1>Film Folk</h1>
 
