--- a/04/index.html
+++ b/04/index.html
@@ -6,10 +6,11 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class="show_goal">
+<body class="show_goal see_through">
 
 <h1>Scrambled Eggs</h1>
-<p>Eggs are one of my favorite foods. Here is a recipe for deliciously rich scrambled eggs.</p>
+<p>Eggs are one of my favorite foods. Here is a  
+recipe for deliciously rich scrambled eggs.</p>
 
 <h2>Ingredients</h2>
 <ul>
