--- a/04/index.html
+++ b/04/index.html
@@ -10,17 +10,17 @@
 
 <h1>Scrambled Eggs</h1>
 <p>Eggs are one of my favorite foods. Here is a  
-recipe for deliciously rich scrambled eggs.</p>
+<br>recipe for deliciously rich scrambled eggs.</p>
 
 <h2>Ingredients</h2>
-<ul>
+<ul class="a">
   <li>2 eggs</li>
   <li>1tbs butter</li>
   <li>2tbs cream</li>
 </ul>
 
 <h2>Method</h2>
-<ol>
+<ol class="b">
   <li>Melt butter in a frying pan over a medium heat</li>
   <li>Gently mix the eggs and cream in a bowl</li>
   <li>Once butter has melted add cream and eggs</li>
