--- a/02/index.html
+++ b/02/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
-<head>
+<head> 
   <title>CSS Exercise</title>
 
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class="show_goal">
+<body class="show_goal see_through">
 
 <h1>Hello world!</h1>
 
