--- a/03/index.html
+++ b/03/index.html
@@ -6,11 +6,11 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class="show_goal">
+<body class="show_goal see_through">
 
-<h1>Hello world!</h1>
+<h1 id="header">Hello world!</h1>
 
-<p>This is my great website.</p>
+<p id="paragraph">This is my great website.</p>
 
 </body>
 </html>
