--- a/05/index.html
+++ b/05/index.html
@@ -6,8 +6,7 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class="show_goal">
-
+<body class="show_goal see-through">
 <h1>Film Folk</h1>
 
 <h2>Festival Diary</h2>
@@ -23,6 +22,5 @@
 
 <h3>May</h3>
 <p><a href="http://www.festival-cannes.com">Cannes International Film Festival</a><br />Cannes, France<br />11 - 22 May 2011</p>
-
 </body>
 </html>
