--- a/06/index.html
+++ b/06/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class="show_goal">
+<body class="">
 
 <h1>Film Folk</h1>
 
@@ -42,6 +42,8 @@
     <a href="http://www.festival-cannes.com">Cannes International Film Festival</a><br />Cannes, France<br />11 - 22 May 2011
   </div>
 </div>
+
+<h4></h4>
 
 </body>
 </html>
