--- a/11/index.html
+++ b/11/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="show_goal see_through">
 
-<div>
+<div id="search_box">
   <img src="icon.png" alt="">
   <span class="icon_text">Search</span>
 </div>
