--- a/10/index.html
+++ b/10/index.html
@@ -6,26 +6,30 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class="show_goal see_through">
+<body class="show_goal ough">
 
 <div class="box">
   <h4>Conversation Starters</h4>
   <div class="blurb">Explore provocative views on major issues.</div>
+  <div class="clear"></div>
 </div>
 
 <div class="box">
   <h4>Smarter Living</h4>
   <div class="blurb">See our latest tips for making the most of your daily life.</div>
+  <div class="clear"></div>
 </div>
 
 <div class="box">
-  <h4>Critics’ Takes</h4>
+  <h4>Critics Takes</h4>
   <div class="blurb">Read our experts on today’s arts and entertainment.</div>
+  <div class="clear"></div>
 </div>
 
-<div class="box">
-  <h4>Great Reads</h4>
+<div class="box" style="display:none;">
+  <h4 >Great Reads</h4>
   <div class="blurb">Delve into the week’s most engaging reporting and writing.</div>
+  <div class="clear"></div>
 </div>
 
 </body>
