--- a/06/index.html
+++ b/06/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class="">
+<body class="show_goal see_through">
 
 <h1>Film Folk</h1>
 
@@ -19,7 +19,8 @@
   <h3>January</h3>
 
   <div class="festival">
-    <a href="http://www.sundance.org">Sundance Film Festival</a><br />Park City, Utah, USA<br />20 - 30 January 2011
+    <a href="http://www.sundance.org">Sundance Film Festival</a>
+    <p><br />Park City, Utah, USA<br />20 - 30 January 2011</p>
   </div>
 </div>
 
@@ -27,11 +28,13 @@
   <h3>March</h3>
 
   <div class="festival">
-    <a href="http://sxsw.com">South by Southwest</a><br />Austin, Texas, USA<br />11 - 20 March 2011    
+    <a href="http://sxsw.com">South by Southwest</a>
+    <p><br />Austin, Texas, USA<br />11 - 20 March 2011  </p>  
   </div>
 
   <div class="festival">
-    <a href="http://www.londonindependent.org">London Independent Film Festival</a><br />London, UK<br />15 - 24 April 2011
+    <a href="http://www.londonindependent.org">London Independent Film Festival</a>
+    <p><br />London, UK<br />15 - 24 April 2011</p>
   </div>
 </div>
 
@@ -39,11 +42,10 @@
   <h3>May</h3>
 
   <div class="festival">
-    <a href="http://www.festival-cannes.com">Cannes International Film Festival</a><br />Cannes, France<br />11 - 22 May 2011
+    <a href="http://www.festival-cannes.com">Cannes International Film Festival</a>
+    <p><br />Cannes, France<br />11 - 22 May 2011</p>
   </div>
 </div>
-
-<h4></h4>
 
 </body>
 </html>
