can't get icon_text to move down

--- a/11/index.html
+++ b/11/index.html
@@ -6,11 +6,12 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class="show_goal">
+<body class="show_goal see_through">
 
 <div>
   <img src="icon.png" alt="">
   <span class="icon_text">Search</span>
+  <div class="clear"></div>
 </div>
 
 </body>
