--- a/12/index.html
+++ b/12/index.html
@@ -6,7 +6,16 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body>
+<body class="show_goal see_through">
+
+<div id="images_box">
+  <div class="float_left">
+    <img class="float_left" src="300x300.gif" alt="">
+      <!-- could have made paragraphs links -->
+    <p class="lede">The Bright Spots on Ceres Just Got Even Weirder</p>
+    <p class="source">Popular Mechanics</p>
+  </div>
+</div>
 
 <!-- Write your own! -->
 <!-- Use placeholder images (https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=placeholder+image) for the graphics. -->
