--- a/12/index.html
+++ b/12/index.html
@@ -15,7 +15,15 @@
     <p class="lede">The Bright Spots on Ceres Just Got Even Weirder</p>
     <p class="source">Popular Mechanics</p>
   </div>
+  <div class="float_right">
+    <img class="float_left" src="300x300.gif" alt="">
+      <!-- could have made paragraphs links -->
+    <p class="lede">Astronomers notice unexpected change in Ceres' bright spots</p>
+    <p class="source">UPI</p>
+  </div>  
 </div>
+
+
 
 <!-- Write your own! -->
 <!-- Use placeholder images (https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=placeholder+image) for the graphics. -->
