Four appears to be working, albeit imperfectly.

--- a/04/index.html
+++ b/04/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class="show_goal">
+<body class="show_goal see_through">
 
 <h1>Scrambled Eggs</h1>
 <p>Eggs are one of my favorite foods. Here is a recipe for deliciously rich scrambled eggs.</p>
@@ -24,7 +24,7 @@
   <li>Gently mix the eggs and cream in a bowl</li>
   <li>Once butter has melted add cream and eggs</li>
   <li>Using a spatula fold the eggs from the edge of the pan to the center every 20 seconds (as if you are making an omelette)</li>
-  <li>When the eggs are still moist remove from the heat (it will continue to cook on the plate until served)</li>
+  <li>When the eggs are still moist remove from the heat <br> (it will continue to cook on the plate until served)</li>
 </ol>
 
 </body>
