--- a/12/index.html
+++ b/12/index.html
@@ -6,10 +6,22 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body>
+<body class="show_goal see_through">
 
-<!-- Write your own! -->
-<!-- Use placeholder images (https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=placeholder+image) for the graphics. -->
+<div class="box">
+
+  <h4>The bright spots on Ceres just got even weirder</h4>
+  <div class="blurb">Popular Mechanics</div>
+  <img src="http://lorempixel.com/75/75/" alt="">
+  <div class="clear"></div>
+</div>
+
+<div class="box">
+  <h4>Astronomers notice some weird shit in the sky</h4>
+  <div class="blurb">UPI</div>
+  <img src="http://lorempixel.com/75/75/" alt="">
+  <div class="clear"></div>
+</div>
 
 </body>
 </html>
