12 done. screen width set to 524px. responsive

--- a/12/index.html
+++ b/12/index.html
@@ -9,19 +9,19 @@
 <body class="show_goal see_through">
 
 <div class="box">
-
+  <img src="http://lorempixel.com/70/70/" alt="">
   <h4>The bright spots on Ceres just got even weirder</h4>
   <div class="blurb">Popular Mechanics</div>
-  <img src="http://lorempixel.com/75/75/" alt="">
   <div class="clear"></div>
 </div>
 
 <div class="box">
+  <img src="http://lorempixel.com/70/70/" alt="">
   <h4>Astronomers notice some weird shit in the sky</h4>
   <div class="blurb">UPI</div>
-  <img src="http://lorempixel.com/75/75/" alt="">
   <div class="clear"></div>
 </div>
 
+<h2>Screen Width: 524px</h2>  
 </body>
 </html>
