--- a/05/index.html
+++ b/05/index.html
@@ -22,7 +22,7 @@
 <p><a href="http://www.londonindependent.org">LONDON INDEPENDENT FILM FESTIVAL</a><br />London, UK<br />15 - 24 April 2011</p>
 
 <h3>MAY</h3>
-<p id="may"><a href="http://www.festival-cannes.com">CANNES INTERNATIONAL FILM Festival</a><br />Cannes, France<br />11 - 22 May 2011</p>
+<p id="may"><a href="http://www.festival-cannes.com">CANNES INTERNATIONAL FILM FESTIVAL</a><br />Cannes, France<br />11 - 22 May 2011</p>
 
 </body>
 </html>
