--- a/12/index.html
+++ b/12/index.html
@@ -9,13 +9,13 @@
 <body class="show_goal see_through">
 
 <div id="images_box">
-  <div class="float_left">
+  <div id="left_column" class="float_left">
     <img class="float_left" src="300x300.gif" alt="">
       <!-- could have made paragraphs links -->
     <p class="lede">The Bright Spots on Ceres Just Got Even Weirder</p>
     <p class="source">Popular Mechanics</p>
   </div>
-  <div class="float_right">
+  <div id="right_column" class="float_right">
     <img class="float_left" src="300x300.gif" alt="">
       <!-- could have made paragraphs links -->
     <p class="lede">Astronomers notice unexpected change in Ceres' bright spots</p>
