--- a/12/index.html
+++ b/12/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class="show_goal see_through">
+<body class="show_goal">
 
 <div class="box">
   <img src="http://lorempixel.com/70/70/" alt="">
