css09 close enougH

--- a/09/index.html
+++ b/09/index.html
@@ -6,18 +6,20 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body>
+<body class=" see_through">
 
-<div class="button_container">
+<div class="button_container" id="subscribe">
   <a href="#" class="button">
     Subscribe Now
   </a>
+  <div class="clear"></div>
 </div>
 
-<div class="button_container">
+<div class="button_container" id="login">
   <a href="#" class="button">
     Log In
   </a>
+  <div class="clear"></div>
 </div>
 
 </body>
