--- a/10/index.html
+++ b/10/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body>
+<body class=" see_through">
 
 <div class="box">
   <h4>Conversation Starters</h4>
@@ -26,6 +26,7 @@
 <div class="box">
   <h4>Great Reads</h4>
   <div class="blurb">Delve into the week’s most engaging reporting and writing.</div>
+  <div id="clear"></div>
 </div>
 
 </body>
