Working on Exercise 5

--- a/05/index.html
+++ b/05/index.html
@@ -6,13 +6,14 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class="show_goal">
+<body class="see_through">
 
 <h1>Film Folk</h1>
 
 <h2>Festival Diary</h2>
 <p id="intro">Here are some of the film festivals we are looking forward to attending this year.</p>
 
+<div id="festival_list">
 <h3>January</h3>
 <p><a href="http://www.sundance.org">Sundance Film Festival</a><br />Park City, Utah, USA<br />20 - 30 January 2011</p>
 
@@ -23,6 +24,6 @@
 
 <h3>May</h3>
 <p><a href="http://www.festival-cannes.com">Cannes International Film Festival</a><br />Cannes, France<br />11 - 22 May 2011</p>
-
+</div>
 </body>
 </html>
