05 as done as I can get today. all lines up except the spacing around the <br> elements. Can't do anything with a br tag. Maybe I will get back to this someday.

--- a/09/index.html
+++ b/09/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body>
+<body class= "show_goal see_through">
 
 <div class="button_container">
   <a href="#" class="button">
