--- a/05/index.html
+++ b/05/index.html
@@ -6,17 +6,18 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class="show_goal">
+<body id="body" class="show_goal see_through">
 
-<h1>Film Folk</h1>
+<h1 id="header">Film Folk</h1>
 
 <h2>Festival Diary</h2>
 <p id="intro">Here are some of the film festivals we are looking forward to attending this year.</p>
 
-<h3>January</h3>
-<p><a href="http://www.sundance.org">Sundance Film Festival</a><br />Park City, Utah, USA<br />20 - 30 January 2011</p>
+<h3 id="january">January </h3>
 
-<h3>March</h3>
+<p id="dates" ><a id="sundance"href="http://www.sundance.org">Sundance Film Festival</a><br />Park City, Utah, USA<br />20 - 30 January 2011</p>
+
+<h3 id="march">March</h3>
 <p><a href="http://sxsw.com">South by Southwest</a><br />Austin, Texas, USA<br />11 - 20 March 2011</p>
 
 <p><a href="http://www.londonindependent.org">London Independent Film Festival</a><br />London, UK<br />15 - 24 April 2011</p>
