--- a/06/index.html
+++ b/06/index.html
@@ -6,19 +6,21 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class="show_goal">
+<body class="show_goal see_through">
 
 <h1>Film Folk</h1>
 
-<div id="intro">
-  <h2>Festival Diary</h2>
-  <p>Here are some of the film festivals we are looking forward to attending this year.</p>
+<div id="Here">
+  <h2 id="festival">Festival Diary</h2>
+  
+  <p >Here are some of the film festivals we are looking forward to attending this year.</p>
 </div>
 
 <div class="month">
   <h3>January</h3>
 
   <div class="festival">
+
     <a href="http://www.sundance.org">Sundance Film Festival</a><br />Park City, Utah, USA<br />20 - 30 January 2011
   </div>
 </div>
