--- a/10/index.html
+++ b/10/index.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class=" see_through">
+<body class="
+ see_through">
 
 <div class="box">
   <h4>Conversation Starters</h4>
@@ -21,12 +22,6 @@
 <div class="box">
   <h4>Critics’ Takes</h4>
   <div class="blurb">Read our experts on today’s arts and entertainment.</div>
-</div>
-
-<div class="box">
-  <h4>Great Reads</h4>
-  <div class="blurb">Delve into the week’s most engaging reporting and writing.</div>
-  <div id="clear"></div>
 </div>
 
 </body>
