--- a/05/index.html
+++ b/05/index.html
@@ -14,18 +14,26 @@
 
 <h3>January</h3>
 <p><a href="http://www.sundance.org">Sundance Film Festival</a></p>
-<div class="more_info"><p><br />Park City, Utah, USA<br />20 - 30 January 2011</p></div>
+<div class="more_info">
+<p>Park City, Utah, USA</p>
+<p>20 - 30 January 2011</p></div>
 
 <h3>March</h3>
 <p><a href="http://sxsw.com">South by Southwest</a></p>
-<div class="more_info"><p><br />Austin, Texas, USA<br />11 - 20 March 2011</p></div>
+<div class="more_info">
+<p>Austin, Texas, USA</p>
+<p>11 - 20 March 2011</p></div>
 
 <p><a href="http://www.londonindependent.org">London Independent Film Festival</a></p>
-<div class="more_info"><p><br />London, UK<br />15 - 24 April 2011</p></div>
+<div class="more_info">
+<p>London, UK</p>
+<p>15 - 24 April 2011</p></div>
 
 <h3>May</h3>
 <p><a href="http://www.festival-cannes.com">Cannes International Film Festival</a></p>
-<div class="more_info"><p><br />Cannes, France<br />11 - 22 May 2011</p></div>
+<div class="more_info">
+<p>Cannes, France</p>
+<p>11 - 22 May 2011</p></div>
 
 </body>
 </html>
