--- a/10/index.html
+++ b/10/index.html
@@ -6,22 +6,21 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class="
- see_through">
+<body class="show_goal see_through ">
 
-<div class="box">
+<div class="box" id="conversation">
   <h4>Conversation Starters</h4>
   <div class="blurb">Explore provocative views on major issues.</div>
 </div>
 
-<div class="box">
+<div class="box" id="smarter_living">
   <h4>Smarter Living</h4>
   <div class="blurb">See our latest tips for making the most of your daily life.</div>
 </div>
 
-<div class="box">
-  <h4>Critics’ Takes</h4>
-  <div class="blurb">Read our experts on today’s arts and entertainment.</div>
+<div class="box" id="critics_take">
+  <h4>Critics' Takes</h4>
+  <div class="blurb">Read our experts on today's arts and entertainment.</div>
 </div>
 
 </body>
