--- a/10/index.html
+++ b/10/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+<body class="">
 <div class="box">
   <h4>Conversation Starters</h4>
   <div class="blurb">Explore provocative views on major issues.</div>
