Finished fixing through exercise 7

--- a/06/index.html
+++ b/06/index.html
@@ -20,7 +20,8 @@
 
   <div class="festival">
     <a href="http://www.sundance.org">Sundance Film Festival</a>
-    <p><br />Park City, Utah, USA<br />20 - 30 January 2011</p>
+    <p>Park City, Utah, USA</p>
+    <p>20 - 30 January 2011</p>
   </div>
 </div>
 
@@ -29,12 +30,14 @@
 
   <div class="festival">
     <a href="http://sxsw.com">South by Southwest</a>
-    <p><br />Austin, Texas, USA<br />11 - 20 March 2011  </p>  
+    <p>Austin, Texas, USA</p>
+    <p>11 - 20 March 2011</p> 
   </div>
 
   <div class="festival">
     <a href="http://www.londonindependent.org">London Independent Film Festival</a>
-    <p><br />London, UK<br />15 - 24 April 2011</p>
+    <p>London, UK</p>
+    <p>15 - 24 April 2011</p>
   </div>
 </div>
 
@@ -43,7 +46,8 @@
 
   <div class="festival">
     <a href="http://www.festival-cannes.com">Cannes International Film Festival</a>
-    <p><br />Cannes, France<br />11 - 22 May 2011</p>
+    <p>Cannes, France</p>
+    <p>11 - 22 May 2011</p>
   </div>
 </div>
 
