--- a/07/index.html
+++ b/07/index.html
@@ -19,7 +19,9 @@
   <h3>January</h3>
 
   <div class="festival">
-    <a href="http://www.sundance.org">Sundance Film Festival</a><br />Park City, Utah, USA<br />20 - 30 January 2011
+    <a href="http://www.sundance.org">Sundance Film Festival</a>
+    <p>Park City, Utah, USA<br>
+    20 - 30 January 2011</p>
   </div>
 </div>
 
@@ -27,11 +29,15 @@
   <h3>March</h3>
 
   <div class="festival">
-    <a href="http://sxsw.com">South by Southwest</a><br />Austin, Texas, USA<br />11 - 20 March 2011    
+    <a href="http://sxsw.com">South by Southwest</a>
+    <p>Austin, Texas, USA<br>
+    11 - 20 March 2011</p> 
   </div>
 
   <div class="festival">
-    <a href="http://www.londonindependent.org">London Independent Film Festival</a><br />London, UK<br />15 - 24 April 2011
+    <a href="http://www.londonindependent.org">London Independent Film Festival</a>
+    <p>London, UK<br>
+    15 - 24 April 2011</p>
   </div>
 </div>
 
@@ -39,7 +45,9 @@
   <h3>May</h3>
 
   <div class="festival">
-    <a href="http://www.festival-cannes.com">Cannes International Film Festival</a><br />Cannes, France<br />11 - 22 May 2011
+    <a href="http://www.festival-cannes.com">Cannes International Film Festival</a>
+    <p>Cannes, France<br>
+    11 - 22 May 2011</p>
   </div>
 </div>
 
