--- a/11/index.html
+++ b/11/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
 <body>
+<body class="">
 
 <div>
   <img src="icon.png" alt="">
