--- a/11/index.html
+++ b/11/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body>
+<body class="show_goal ">
 
 <div>
   <img src="icon.png" alt="">
