--- a/09/index.html
+++ b/09/index.html
@@ -6,15 +6,15 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body>
+<body class="show_goal see_through">
 
-<div class="button_container">
+<div class="button_container subscribe">
   <a href="#" class="button">
     Subscribe Now
   </a>
 </div>
 
-<div class="button_container">
+<div class="button_container log_in">
   <a href="#" class="button">
     Log In
   </a>
