--- a/06/index.html
+++ b/06/index.html
@@ -23,14 +23,14 @@
   </div>
 </div>
 
-<div class="month multiple">
+<div class="month">
   <h3>March</h3>
 
   <div class="festival">
     <a href="http://sxsw.com">South by Southwest</a><br />Austin, Texas, USA<br />11 - 20 March 2011    
   </div>
 
-  <div class="festival">
+  <div class=" multiple festival">
     <a href="http://www.londonindependent.org">London Independent Film Festival</a><br />London, UK<br />15 - 24 April 2011
   </div>
 </div>
