--- a/12/index.html
+++ b/12/index.html
@@ -8,8 +8,18 @@
 </head>
 <body>
 
-<!-- Write your own! -->
-<!-- Use placeholder images (https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=placeholder+image) for the graphics. -->
+<div class="box">
+  <img src="placeholder.png" alt="">
+  <h4>The Bright Spots On Ceres Just Got Even Weirder</h4>
+  <div class="news_source">Popular Mechanics</div>
+<!--   <div class="clear"></div>
+ --></div>
+
+<div class="box">
+  <img src="placeholder.png" alt="">
+  <h4>Astronomers notice unexpected changes to Ceres' bright spots</h4>
+  <div class="news_source">UPI</div>
+</div>
 
 </body>
 </html>
