--- a/09/index.html
+++ b/09/index.html
@@ -8,13 +8,13 @@
 </head>
 <body class= "show_goal see_through">
 
-<div class="button_container">
+<div class="left_button_container">
   <a href="#" class="button">
     Subscribe Now
   </a>
 </div>
 
-<div class="button_container">
+<div class="right_button_container">
   <a href="#" class="button">
     Log In
   </a>
