--- a/10/index.html
+++ b/10/index.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body>
+<body class="show_goal see_through">
 
-<div class="box">
+<div class="box" id="first_box">
   <h4>Conversation Starters</h4>
   <div class="blurb">Explore provocative views on major issues.</div>
 </div>
