Html for exercise 12

--- a/12/index.html
+++ b/12/index.html
@@ -11,5 +11,17 @@
 <!-- Write your own! -->
 <!-- Use placeholder images (https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=placeholder+image) for the graphics. -->
 
+<div>
+<img src="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=placeholder+image" alt="">
+<p>The Bright Spots On Ceres Just Got Even Weirder</p>
+<p>Popular Mechanics</p>
+</div>
+
+<div>
+<img src="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=placeholder+image" alt="">
+<p>Astronomers notice unexpected changes to Ceres' bright spots</p>
+<p>UPI</p>
+</div>
+
 </body>
 </html>
