top forth of css 12 done

--- a/13/index.html
+++ b/13/index.html
@@ -6,14 +6,34 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body>
+<body class="show_goal see_through ">
+<div class="top_bar">
+  <div class="section">
+    <img src="bars.png">
+    <p class="top_bar_text">SECTIONS</p>
+  </div>
+  <div class="search">
+    <img src="icon.png">
+    <p class="top_bar_text">SEARCH</p>
+  </div>
+  <div class="clear"></div>
+</div>
+<div class="title_bar">
+  <img src="cadilac_logo.png" class="cadilac_logo">
+  <img class="the_times" src="the_ne.png">
+  <div class="date">Sunday, March 19, 2016</div>
+  <div class="clear"></div>
+</div>
+<div class="sections_bar">
+  <p class="tabs">World</p>
+  <p class="tabs">U.S.</p>
+  <p class="tabs">Politics</p>
+  <p class="tabs">N.Y></p>
+  <p class="tabs">Busines</p>
+  <p class="tabs">Opinion</p>
+  <p class="tabs">Tech</p>                                                       
+</div>
 
-<!-- Build part of today's NYTimes.com homepage. -->
-<!--
-  Take a screenshot of it (command+shift+4 will give you a way to draw an area you want to capture in the screenshot, and the image will be saved onto your Desktop).
-
-  Then move that image into this folder (If successful, it should show up on the left, in Sublime Text's sidebar). Now, when you load the index.html page, you'll see your graphic (and will be able to make it see through like with previous exercises.)
--->
 
 </body>
 </html>
