Exercise 10 close enough for now

--- a/10/index.html
+++ b/10/index.html
@@ -23,7 +23,7 @@
   <div class="blurb">Read our experts on today's arts and entertainment.</div>
 </div>
 
-<div class="box">
+<div class="box end">
   <h4>Great Reads</h4>
   <div class="blurb">Delve into the week's most engaging reporting and writing.</div>
 </div>
