Recreated part of the NYT

--- a/13/index.html
+++ b/13/index.html
@@ -8,12 +8,41 @@
 </head>
 <body>
 
-<!-- Build part of today's NYTimes.com homepage. -->
-<!--
-  Take a screenshot of it (command+shift+4 will give you a way to draw an area you want to capture in the screenshot, and the image will be saved onto your Desktop).
+<div class="header">
+<p>World</p>
+<p>U.S.</p>
+<p>Politics</p>
+<p>N.Y.</p>
+<p>Business</p>
+<p>Opinion</p>
+<p>Tech</p>
+<p>Science</p>
+<p>Health</p>
+<p>Sports</p>
+<p>Arts</p>
+</div>
 
-  Then move that image into this folder (If successful, it should show up on the left, in Sublime Text's sidebar). Now, when you load the index.html page, you'll see your graphic (and will be able to make it see through like with previous exercises.)
--->
+<div id="left_column">
+<p class="title">Grim Forecast Is Issued Amid Zika Epidemic in Puerto Rico</p>
+<p class="author">By DONALD G. McNEIL Jr.</p>
+<p class="time">12:17 PM ET</p>
+<p class="blurb">A quarter of the island's 3.5 million people will probably get the Zika virus within a year, health officials predict, and eventually 80 percent or more may be infected.</p>
+<p class="add_on">Short Answers to Hard Questions About Zika Virus</p>
+
+<img id="election_clip" src="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=placeholder+image" alt="" height="20" width="20">
+<p class="topic">Election 2016</p>
+<p class="secondary_title">Republican Leaders Map a Strategy to Derail Trump</p>
+</div>
+
+<div id="right_column">
+<img id="election_clip" src="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=placeholder+image" alt="" height="250" width="350">
+
+<p class="author" id="photo_info">SHOUT, animation by Ale Pixel Studio</p>
+<p class="tertiary_title">Making Museums Moral Again</p>
+<p class="blurb">The impact of corporations on the art world has divested museums of their roles as explainers of history and providers of life lessons. Is it too late to change that?</p>
+<p class="author" id="holland">By HOLLAND COTTER</p>
+<p class="add_on">Read More From the Museums Special Section</p>
+</div>
 
 </body>
 </html>
