--- a/12/index.html
+++ b/12/index.html
@@ -6,10 +6,23 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body>
+<body class="">
 
 <!-- Write your own! -->
 <!-- Use placeholder images (https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=placeholder+image) for the graphics. -->
+<div class="links">
+<div class="article">
+  <img src="http://f.cl.ly/items/2e1X280z0P3I3c252i1e/Image%202016-03-19%20at%204.57.51%20PM.png">
+  <a href="#">The Bright Spots on Ceres Just Got Even Weirder</a>
+  <p>Popular Mechanics</p>
+</div>
 
+<div class="article">
+  <img src="http://f.cl.ly/items/2G1w2C043G2a2W2M403d/Image%202016-03-19%20at%204.58.09%20PM.png">
+  <a href="#">Astronomers notice unexpected changes to Ceres' bright spots</a>
+  <p>UPI</p>
+</div>
+</div>
 </body>
 </html>
+
