css 13 is close to done

--- a/13/index.html
+++ b/13/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class="show_goal see_through ">
+<body class=" ">
 <div class="top_bar">
   <div class="section">
     <img src="bars.png">
@@ -28,10 +28,22 @@
   <p class="tabs">World</p>
   <p class="tabs">U.S.</p>
   <p class="tabs">Politics</p>
-  <p class="tabs">N.Y></p>
+  <p class="tabs">N.Y</p>
   <p class="tabs">Busines</p>
   <p class="tabs">Opinion</p>
-  <p class="tabs">Tech</p>                                                       
+  <p class="tabs">Tech</p>
+  <div class="clear"></div>                                               
+</div>
+<div class="add_bar">
+  <img src="cadilac_logo.png" id="add_logo">
+  <img src="car.png" id="car">
+  <div class="lines">ONLY<br>INTRO</div>
+  <div class="clear"></div>
+</div>
+<div class="column_left">
+  <div class="headline_text">More Than 60 Killed in Crash of Dubai Jet at Russian Airport</div>
+  <div class="author">By IVAN NECHEPURENKO</div>
+  <div class="content">All 55 passengers and seven crew members died when a United Arab Emirates plane crashed in the southern city of Rostov-on-Don. Strong winds may have been the cause, officials said.</div>
 </div>
 
 
