It was like I forgot how to do floats for a while there. I don't know when all of this becomes second nature. Maybe never.

--- a/12/index.html
+++ b/12/index.html
@@ -6,7 +6,38 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body>
+<body class="show_goal see_through">
+
+  <div class="science_item_photo" id="first">
+    <img src="https://www.google.com/search?q=placeholder+image&biw=1148&bih=737&espv=2&tbm=isch&imgil=UQhzVsmnlKx-VM%253A%253Bc7VDzmZyRAYTDM%253Bhttp%25253A%25252F%25252Fwww.pacinno.eu%25252Fme%25252F%25253Fattachment_id%2525253D364&source=iu&pf=m&fir=UQhzVsmnlKx-VM%253A%252Cc7VDzmZyRAYTDM%252C_&usg=__SIhcS7BIPZd2dLuzL4Cp9n4o3C0%3D&dpr=1&ved=0ahUKEwj23-jpz83LAhXrk4MKHdsGBqsQyjcILw&ei=K7vtVraeFeunjgTbjZjYCg#imgrc=UQhzVsmnlKx-VM%3A" alt="">
+  </div>
+
+<div class="science_item" id="first">
+  <div class="science_item_headline">
+    <h3>The Bright Spots On Ceres Just Got Even Weirder</h3>
+  </div>
+
+  <div class="science_item_source_credit">
+    <p>Popular Mechanics</p>
+  </div>
+</div>
+
+
+
+
+  <div class="science_item_photo" id="second">
+    <img src="https://www.google.com/search?q=placeholder+image&biw=1148&bih=737&espv=2&tbm=isch&imgil=UQhzVsmnlKx-VM%253A%253Bc7VDzmZyRAYTDM%253Bhttp%25253A%25252F%25252Fwww.pacinno.eu%25252Fme%25252F%25253Fattachment_id%2525253D364&source=iu&pf=m&fir=UQhzVsmnlKx-VM%253A%252Cc7VDzmZyRAYTDM%252C_&usg=__SIhcS7BIPZd2dLuzL4Cp9n4o3C0%3D&dpr=1&ved=0ahUKEwj23-jpz83LAhXrk4MKHdsGBqsQyjcILw&ei=K7vtVraeFeunjgTbjZjYCg#imgrc=UQhzVsmnlKx-VM%3A" alt="">
+  </div>
+
+<div class="science_item" id="second">
+  <div class="science_item_headline">
+    <h3>Astronomers notice unexpected changes to Ceres' bright spots</h3>
+  </div>
+
+  <div class="science_item_source_credit">
+    <p>UPI</p>
+  </div>
+</div>
 
 <!-- Write your own! -->
 <!-- Use placeholder images (https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=placeholder+image) for the graphics. -->
