ny times is close enough

--- a/13/index.html
+++ b/13/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class=" ">
+<body class=" see_through">
 <div class="top_bar">
   <div class="section">
     <img src="bars.png">
@@ -43,6 +43,7 @@
 <div class="column_left">
   <div class="headline_text">More Than 60 Killed in Crash of Dubai Jet at Russian Airport</div>
   <div class="author">By IVAN NECHEPURENKO</div>
+  <div class="time">10:19 AM ET</div>
   <div class="content">All 55 passengers and seven crew members died when a United Arab Emirates plane crashed in the southern city of Rostov-on-Don. Strong winds may have been the cause, officials said.</div>
 </div>
 
