Working on the final exercise.

--- a/13/index.html
+++ b/13/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body>
+<body class="">
 
 <!-- Build part of today's NYTimes.com homepage. -->
 <!--
@@ -14,6 +14,54 @@
 
   Then move that image into this folder (If successful, it should show up on the left, in Sublime Text's sidebar). Now, when you load the index.html page, you'll see your graphic (and will be able to make it see through like with previous exercises.)
 -->
+
+<div class="header">
+  <div class="nav_left">
+    <img src="http://f.cl.ly/items/272t1T2x0v2G1831143n/Image%202016-03-20%20at%203.53.08%20PM.png" alt="">
+    <span class="icon_text">Sections</span>
+  </div>
+
+  <div class="nav_left">
+    <img src="icon.png" alt="">
+    <span class="icon_text">Search</span>
+  </div>
+
+  <div class="settings">
+      <img src="http://f.cl.ly/items/1i0H0e3x430E0w3c043Q/Image%202016-03-20%20at%203.27.51%20PM.png" alt="">
+  </div> 
+
+  <div class="button_container">
+    <a href="#" class="button">
+      Log In
+    </a>
+  </div>
+    
+  <div class="button_container">
+    <a href="#" class="button">
+      Subscribe Now
+    </a>
+  </div>
+
+</div>
+
+<div class="main_heading">
+  <div class="top_left_ad">
+    <img src="https://tpc.googlesyndication.com/simgad/5983671815232962563">
+  </div>
+
+  <div id="main_logo">
+  <h2>
+    <img src="https://a1.nyt.com/assets/homepage/20160317-173827/images/foundation/logos/nyt-logo-379x64.png">
+  </h2>
+  </div>
+
+  <div class="top_right_ad">
+    <img src="https://tpc.googlesyndication.com/simgad/4816848546888006711">
+  </div>
+
+</div>
+
+
 
 </body>
 </html>
