NY Times Front Page elements displaying as shown on NYTimes site.

--- a/13/index.html
+++ b/13/index.html
@@ -48,11 +48,21 @@
   <div class="top_left_ad">
     <img src="https://tpc.googlesyndication.com/simgad/5983671815232962563">
   </div>
+<div class="main_heading_center">
+  <div class="editions">
+    <ul>
+      <li>U.S.</li>
+      <li><a href="http://international.nytimes.com">International</a></li>
+      <li><a href="http://cn.nytimes.com">中文</a></li>
+      <li><a id="spanish" href="http://www.nytimes.com/es/">Español</a></li>
+    </ul>
+  </div>
 
   <div id="main_logo">
   <h2>
     <img src="https://a1.nyt.com/assets/homepage/20160317-173827/images/foundation/logos/nyt-logo-379x64.png">
   </h2>
+  </div>
   </div>
 
   <div class="top_right_ad">
