Completed work on 13 for today.

--- a/13/index.html
+++ b/13/index.html
@@ -140,6 +140,10 @@
 
 </div>
 
+<div class="image-under-nav">
+  <img src="http://f.cl.ly/items/2U2f1N2e0V1V0e330A1c/Image%202016-03-20%20at%208.59.34%20PM.png">
+</div>
+
 
 
 </body>
