been working on 12 for a while, will probably just ask tomorrow how other people got it to work. :(

--- a/12/index.html
+++ b/12/index.html
@@ -10,15 +10,16 @@
 
 <div class="box">
   <img src="placeholder.png" alt="">
-  <h4>The Bright Spots On Ceres Just Got Even Weirder</h4>
-  <div class="news_source">Popular Mechanics</div>
+  <div class="clear"></div>
+  <h4 class="text_stuff">The Bright Spots On Ceres Just Got Even Weirder</h4>
+  <div class="text_stuff news_source">Popular Mechanics</div>
 <!--   <div class="clear"></div>
  --></div>
 
 <div class="box">
   <img src="placeholder.png" alt="">
-  <h4>Astronomers notice unexpected changes to Ceres' bright spots</h4>
-  <div class="news_source">UPI</div>
+  <h4 class="text_stuff">Astronomers notice unexpected changes to Ceres' bright spots</h4>
+  <div class="text_stuff news_source">UPI</div>
 </div>
 
 </body>
