--- a/12/index.html
+++ b/12/index.html
@@ -8,8 +8,16 @@
 </head>
 <body>
 
-<!-- Write your own! -->
-<!-- Use placeholder images (https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=placeholder+image) for the graphics. -->
+<div class="article_link">
+  <img src="http://edithhall.co.uk/widget/image/placeholder.png">
+  <span class="article_title">The Bright Spots On Ceres Just Got Even Weirder</span>
+  <div class="website">Popular Mechanics</div>
+</div>
 
+<div class="article_link">
+  <img src="http://edithhall.co.uk/widget/image/placeholder.png">
+  <span class="article_title">Astronomers notice unexpected changes to Ceres' bright spots</span>
+  <div class="website">UPI</div>
+</div>
 </body>
 </html>
